--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -259,11 +259,16 @@ crossorigin=""/>
 
   <div class="envoiRGPD col-4" style="blue;">
     <!-- bouton d'envoi du formulaire-->
-    <button type="submit" class="btn btn-secondary text-center"><span lang="fr">M'inscrire à la newsletter</span><span lang="en">Suscribe to newsletter</span></button>
+    <button class="btn btn-secondary text-center mt-3" type="submit" >
+      <span lang="fr">M'inscrire à la newsletter</span>
+      <span lang="en">Suscribe to newsletter</span>
+    </button>
     <!--RGPD-->
-    <p class="mt-4 mb-0">
-      <b><span lang="fr">Protection des données personnelles :</span>
-         <span lang="en">Protection of personal data :</span></b>
+    <p class="mt-2 mb-0">
+      <b>
+        <span lang="fr">Protection des données personnelles :</span>
+        <span lang="en">Protection of personal data :</span>
+      </b>
     </p>
     <p>
       <span lang="fr">En application du Règlement UE 2016/679 du 27 avril 2016 relatif à la protection des données personnelles, vous disposez du droit de vous opposer à tout moment à la réception de nos newsletters en cliquant sur le lien hypertexte présent dans celles-ci.</span>
