--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -208,10 +208,10 @@ crossorigin=""/>
 
 <!--Gestion du formulaire-->
 <div class="row mt-4">
-  <div class="formulaire col-8 " style="background-color: yellow;">
+  <div class="formulaire col-8 ">
     <form>
     <!--Nom-->  
-      <div class="form-group row">
+      <div class="form-group row" style="background-color: yellow;">
         <label for="inputname" class="col-2 col-form-label">
           <span lang="fr">Nom :</span>
           <span lang="en">Name :</span>
