--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -216,13 +216,13 @@ crossorigin=""/>
           <span lang="fr">Nom :</span>
           <span lang="en">Name :</span>
         </label>
-          <input type="text" class="form-control" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
+          <input type="text" class="form-control col-3" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
           <input type="text" class="form-control" id="inputname" lang="en" placeholder="Write your name here..">
         <label for="inputfirstname" class="col-form-label">
           <span lang="fr">Prénom :</span>
           <span lang="en">First name :</span>
         </label>
-          <input type="text" class="form-control" id="inputfirstname" lang="fr" placeholder="Saisir votre prénom ici..">
+          <input type="text" class="form-control col-3" id="inputfirstname" lang="fr" placeholder="Saisir votre prénom ici..">
           <input type="text" class="form-control" id="inputfirstname" lang="en" placeholder="Write your first name here..">  
       </div>
     <!--emails -->
