--- a/html/_/index.html
+++ b/html/_/index.html
@@ -292,9 +292,7 @@ crossorigin=""/>
 		  		<span lang="en"><b>Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></span>
 		  	</h2>
 		  	<br>
-		  	<div class="text-center">
-		  		<span id="modalbody-componat" class="textitem2"></span>
-		  	</div>
+		  	<span id="modalbody-componat" class="textitem2"></span>
 		  </p>
 		</div>
 			<!--2ème colonne-->
@@ -337,7 +335,7 @@ crossorigin=""/>
 	  <p>
 	  	<h2 class="item  d-inline text-size-16px">
 	  		<span lang="fr"><b>Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b></span>
-	  		<<span lang="en"><b>Botanical name <sup class="fas fa-question-circle iconetab" title="Name of the plant or the animal, according to the International Code of Nomenclature for Plants."></sup> :</b></span>
+	  		<span lang="en"><b>Botanical name <sup class="fas fa-question-circle iconetab" title="Name of the plant or the animal, according to the International Code of Nomenclature for Plants."></sup> :</b></span>
 	  	</h2>
 	  	<span id="modalbody-nbota" class="textitem3" ></span>
 	  </p>
