--- a/html/_/index.html
+++ b/html/_/index.html
@@ -244,7 +244,7 @@ crossorigin=""/>
 
 <div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
-<div class="panel-heading m-0 p-0" style="background: blue;">
+<div class="panel-heading m-0 p-0">
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <!--mobile version-->
     <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
@@ -254,7 +254,7 @@ crossorigin=""/>
       <!--Desktop version-->
     <h3 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
       <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-fill nav-justified " role="tablist">
-        <li class="nav-item">
+        <li class="nav-item" style="white-space:nowrap;">
           <a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">
             <span lang="fr">Présentation Générale</span>
             <span lang="en">General Presentation</span>
