--- a/html/_/index.html
+++ b/html/_/index.html
@@ -332,14 +332,14 @@ crossorigin=""/>
         <span id="modalbody-cas" class="textitem"></span>
         <br>
         <h2 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
-          <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+          <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</b></span>
+          <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</b></span>
         </h2>
         <span id="modalbody-einecs" class="textitem"></span>
         <br>
         <h2 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
-          <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+          <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</b></span>
+          <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</b></span>
         </h2>
         <span id="modalbody-fema" class="textitem"></span>
         <br>
@@ -350,8 +350,8 @@ crossorigin=""/>
         <span id="modalbody-jecfa" class="textitem"></span>
         <br>
         <h2 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
-          <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+          <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première dans le EU FLAVouring Information System."></sup> :</b></span>
+          <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the EU FLAVouring Information System."></sup> :</b></span>
         </h2>
         <span id="modalbody-flavis" class="textitem"></span>
       </p>
