--- a/html/_/index.html
+++ b/html/_/index.html
@@ -687,7 +687,7 @@ crossorigin=""/>
     <p>
       <h1 class="item d-inline text-size-16px">
         <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
-        <span lang="fr"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+        <span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
       </h1>
       <span id="modalbody-ncas1" class="textitem"></span>
       <br>
