--- a/html/_/index.html
+++ b/html/_/index.html
@@ -695,25 +695,25 @@ crossorigin=""/>
           <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</b></span>
           <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</b></span>
       </h2>
-      <span id="modalbody-einecs" class="textitem"></span>
+      <span id="modalbody-einecs1" class="textitem"></span>
       <br>
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</b></span>
         <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</b></span>
       </h2>
-      <span id="modalbody-fema" class="textitem"></span>
+      <span id="modalbody-fema1" class="textitem"></span>
       <br>
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>N° JECFA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
         <span lang="en"><b>JECFA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
       </h2>
-      <span id="modalbody-jecfa" class="textitem"></span>
+      <span id="modalbody-jecfa1" class="textitem"></span>
       <br>
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première dans le EU FLAVouring Information System."></sup> :</b></span>
         <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the EU FLAVouring Information System."></sup> :</b></span>
       </h2>
-      <span id="modalbody-flavis" class="textitem"></span>
+      <span id="modalbody-flavis1" class="textitem"></span>
     </p> 
     <p>
       <h2 class="item d-inline text-size-16px">
