--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -5,14 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<link rel="canonical" href="https://www.scentree.co/_/Sources.html">
+<link rel="canonical" href="https://www.scentree.co/_/menu.html">
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Sources</title>
-<title lang="en">ScenTree - Sources</title>
+<title lang="fr">ScenTree - Menu</title>
+<title lang="en">ScenTree - Menu</title>
 <!--Description Google-->
-<meta name="description" content="Afin de garantir toute transparence, nous avons crée cette page qui réunie l'ensemble des ouvrages, sites internet, documents scientifiques et autres études consultés lors de la création de la base de donnée de ScenTree. " />
+<meta name="description" content="Le projet ScenTree à été crée en 2019, il s'agit d'une plateforme de classification et d'information sur les ingrédients utilisés dans la création des parfums. De leurs odeurs à leurs utilisation en passant par leur réglementation, venez découvrir tous leurs secrets." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -33,7 +33,7 @@ crossorigin=""/>
 <header class="d-md-none">
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
-  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
+  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de ScenTree"></a>
 <div class="dropdown">
   <a href="../_/index.html"><i class="fas fa-reply" style="color: black;"></i></a>
 </div>
@@ -55,7 +55,7 @@ crossorigin=""/>
     <div class="dropdown-divider"></div>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-  <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+    <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
   </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
@@ -82,7 +82,7 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-    <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="le logo de Scentree"></a>
+    <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="le logo de Scentree"></a>
   </div>
 </div>
 
@@ -158,80 +158,24 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOURCES</span><span lang="en">SOURCES & REFERENCES</span></h1>
+  <h1 class="gros_titre text-in-color-brown"><span lang="fr">Découvrez le projet ScenTree</span><span lang="en">Discover ScenTree's project</span></h1>
 </div>
 
 <hr>
+ 
+<div class="col-12 text-justify"> 
 
-<div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
+  <div class="col-6 partiedroite" style="background-color: blue;">
+  </div>
 
-<h2 class="maskedtitle mt-3">
-  <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
-  <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
-</h2>
+  <div class="col-6 scrollbarblockgauche pagederoulante">
+    <h2 class="maskedtitle mt-3">
+      <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
+      <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
+    </h2>
+    <div class="sources col-12 mt-3 mb-3"></div>
 
-<div class="sources col-12 mt-3">
-      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p></h3>
-    <ul>
-      <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions</a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
-      <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-      <li><a class="interpop" rel="nofollow" href="http://www.thegoodscentscompany.com" target ="_BLANK"> http://www.thegoodscentscompany.com </a></li>
-      <li><a class="interpop" href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
-      <li><a class="interpop" href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
-      <li><a class="interpop" href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
-      <li><a class="interpop" href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
-      <li><a class="interpop" href="https://www.fragrantica.com/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
-      <li><a class="interpop" href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
-      <li><span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</span></li>
-      <li><span lang="fr">Une partie des données présentées dans cette classification ne sont pas sourcées. Elles proviennent en effet de la collaboration avec plusieurs professionnels du monde de la parfumerie, comme le veux notre protocole de classification des matières premières.</span><span lang="en">Part of the data provided by this classification is not sourced. It comes from our collaboration with a few olfaction and perfumery experts, as our raw materials classification protocol wishes to.</span></li>
-    </ul>
-</div>
-
-<div class="sources col-12 mt-3">
-      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Naturels</span><span lang="en">Naturals</span></b></p></h3>
-        <ul>
-          <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
-          <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
-          <li>P.Franchomme, R.Jollois, D.Péonël. Editions Roger Jollois. "L'aromathérapie exactement" 2001. 510 pages. ISBN: 2-87819-001-7</li>
-          <li>P.Franchomme. Edition TREDANIEL LA MAISNIE. "La science des huiles essentielles médicinales." 2015. 580 pages. ISBN : 978-2813207630 </li>
-          <li>A.O. Tucker, T. Debaggio. Edited by Francesco DeBaggio. "The encyclopedia of herbs - a comprehensive reference to herbs of flavor and fragrance" 2009. 605 pages. ISBN-13: 978-0-88192-994-2 </li>
-          <li>“A list of cultivated plants yielding aroma substances”, 4 pages.</li>
-          <li>Nawal Saïchi, Philippe Durand, Institut Klorane, Edititons Pierre Fabre, “Guide des conifères et espèces apparentées”, 2009, 67 pages. Code 458 125</li>
-          <li>Asja Sarkic, Iris Stappen, Department of Pharmaceutical Chemistry, University of Vienna, “Essential Oils ans Their Single Compounds in Cosmetics”, 2018, 21 pages.</li>
-          <li>United Nations Industrial Development Organization, K. Tuley De Silva, “A Manual on The Essential Oil Industry”, 1995, 231 pages, ISBN : 978-9-2110-6437-7</li>
-          <li>Dr Robert P. Adams, Baylor University, “Identification Of Essential Oil Components By Gas Chromatography Mass Spectrometry”, Edition 4.1, 2017, 809 pages. ISBN : 978-1-932633-21-4</li>
-          <li><a class="interpop" href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
-          <li><a class="interpop" href="https://www.biolandes.com/" target ="_BLANK">https://www.biolandes.com/</a>
-          <li><a class="interpop" href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
-        </ul>
-    </div>
-
-<div class="sources col-12 mt-3">
-      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Synthétiques</span><span lang="en">Synthetics</span></b></p></h3>
-        <ul>
-          <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
-          <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
-          <li>Charles Sell Quest International, Ashford, Kent, “The Chemistry of Fragrances, From Perfumer to Consumer 2nd Edition”, 2006, 348 pages. ISBN-10: 0-85404-824-3</li>
-          <li>David H. Pybus, Charles Sell, Sales and Promotion Department, The Royal Society of Chemistry, “The Chemistry of Fragrances”, 1999, 297 pages. ISBN 0-85404-528-7</li>
-          <li>Günther Ohloff, Wilhelm Pickenhagen, Philip Kraft, NHCA, Verlag Helvetica Chimica Acta, Zürich (Switzerland), “Scent and Chemistry, The Molecular World of Odors”, 2012, 418 pages. ISBN-10: 3906390667</li>
-          <li>Sue Clarke, Elseiver Limited, “Essential Chemistry for Aromatherapy”, First Edition 2002, 302 pages. ISBN : 978-0-4431-0403-9</li>
-          <li>Charles S. Sell, Wiley Edition, “Chemistry and Sense of Smell”, 2014, 471 pages. ISBN : 978-0-470-55130-1</li>
-          <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
-          <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
-        </ul>
-</div>
-
-
-<div class="sources col-12 mt-3 mb-3">
-    <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Réglementation</span><span lang="en">Regulatory</span></b></p></h3>
-    <ul>
-      <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
-      <li><a class="interpop" href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
-      <li><a class="interpop" href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
-    </ul>
-</div>
-
-</div>
+  </div>
 
 
 </div>
