--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -167,12 +167,14 @@ crossorigin=""/>
 <div class="row">
   <div class="col-12 text-justify"> 
     <div class="row">
-      <div class="col-6 partiedroite" style="background-color: blue;">
-        <div class="row nombres">
+      <div class="col-6 partiedroite">
+        <div class="row nombres" style="background-color: blue;">
           <div class="offset-1 col-5">464 Ingredients</div>
           <div class="offset-1 col-5">102 descripteurs</div>
         </div>
-        <div class="row video"></div>
+        <div class="row col-12 video" style="align-items: center;">
+          <video src="https://www.youtube.com/watch?v=jpSyGY1EPVs" width=320  height=240 controls preload="none"></video>
+        </div>
       </div>
 
       <div class="col-6">
@@ -207,7 +209,7 @@ crossorigin=""/>
         <div class="col-12 text-center" style="align-items: center;">
           <p class="license text-center" lang="fr"><i>Pour tout complément d'information, question ou remarque, merci de rentrer en contact avec <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a> ou <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a></i></p>
           <p class="license text-center" lang="en"><i>For any information, request or remark, please contact <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD</a> and <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a></i></p>
-          
+
           <p class="license"><i><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />ScenTree project is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</i><br></p>
 
           <p class="copyright"><sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |</p>
