--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -168,11 +168,11 @@ crossorigin=""/>
   <div class="col-12 text-justify"> 
     <div class="row">
       <div class="col-5 partiedroite">
-        <div class="row nombres" style="background-color: blue;">
+        <div class="col-12 nombres" style="background-color: blue;">
           <div class="offset-1 col-5">464 Ingredients</div>
           <div class="offset-1 col-5">102 descripteurs</div>
         </div>
-        <div class="row col-12 text-center" style="align-items: center;">
+        <div class="col-12 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
         </div>
