--- a/html/_/index.html
+++ b/html/_/index.html
@@ -249,9 +249,9 @@ crossorigin=""/>
 <div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading m-0 p-0">
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <nav class="navbar navbar-expand-lg bg-transparent">
     <!--mobile version-->
-    <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em;">
+    <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; border: 2px solid #dbdbdb;border-radius: 14px 14px 14px 14px;">
       <span lang="fr">Veuillez sélectionner une catégorie..</span>
       <span lang="en">Please select a category..</span>
     </button>
@@ -1054,7 +1054,7 @@ crossorigin=""/>
   <div class="panel-heading  m-0 p-0">
     <nav class="navbar navbar-expand-lg  bg-transparent">
       <!--mobile version-->
-      <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; border: 2px solid #dbdbdb;border-radius: 14px 14px 14px 14px;">
+      <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; border: 2px solid #dbdbdb;border-radius: 14px 14px 14px 14px;">
         <span lang="fr">Veuillez sélectionner une catégorie..</span>
         <span lang="en">Please select a category..</span>
       </button>
