--- a/html/_/index.html
+++ b/html/_/index.html
@@ -509,8 +509,13 @@ crossorigin=""/>
             <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="panel-heading m-0 p-0">
-              <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                <div class="collapse navbar-collapse m-0 p-0">
+              <nav class="navbar navbar-expand-lg bg-transparent">
+
+                <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#amendmentIFRAn" aria-controls="amendmentIFRAn" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; border: 2px solid #dbdbdb;border-radius: 14px 14px 14px 14px;">
+                      <span lang="fr">Choisir amendement..</span>
+                      <span lang="en">Select amendment..</span>
+                </button>
+                <div class="collapse navbar-collapse m-0 p-0" id="amendmentIFRAn">
                   <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                     <li class="nav-item col-6">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
