--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -186,6 +186,23 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">19 avril 2020</span><span lang="en">19<sup>th</sup> april 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h2>
+          <p>
+                  <a class="interpop"  href="../ingredients/Parsley_Seed_EO__Persil_Graine_HE.html"><span lang="en">Parsley Seed EO (CAS N°: 8000-68-8)</span><span lang="fr">Persil Graine HE (CAS N°: 8000-68-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Coriander_Leaf_EO__Coriandre_Feuille_HE.html"><span lang="en">Coriander Leaf EO (CAS N°: 8008-52-4)</span><span lang="fr">Coriandre Feuille HE (CAS N°: 8008-52-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Pear_Ester__Ester_Poire.html"><span lang="en">Pear Ester (CAS N°: 3025-30-7)</span><span lang="fr">Ester Poire (CAS N°: 3025-30-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Delta-Decalactone__Decalactone-Delta.html"><span lang="en">Delta-Decalactone (CAS N°: 705-86-2)</span><span lang="fr">Decalactone-Delta (CAS N°: 705-86-2)</span></a>
+              <br><a class="interpop"  href="../ingredients/Delta-Dodecalactone__Dodecalactone-Delta.html"><span lang="en">Delta-Dodecalactone (CAS N°: 713-95-1)</span><span lang="fr">Dodecalactone-Delta (CAS N°: 713-95-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dihydrojasmone__Dihydrojasmone.html"><span lang="en">Dihydrojasmone (CAS N°: 1128-08-1)</span><span lang="fr">Dihydrojasmone (CAS N°: 1128-08-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/cis-3-Hexenyl_Formate__Formiate_de_cis-3-Hexènyle.html"><span lang="en">cis-3-Hexenyl Formate (CAS N°: 33467-73-1)</span><span lang="fr">Formiate de cis-3-Hexènyle (CAS N°: 33467-73-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Trans-2-cis-6-Nonadienol__Trans-2-cis-6-Nonadiénol.html"><span lang="en">Trans-2-cis-6-Nonadienol (CAS N°: 28069-72-9)</span><span lang="fr">Trans-2-cis-6-Nonadiénol (CAS N°: 28069-72-9)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">12 avril 2020</span><span lang="en">12<sup>th</sup> april 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h2>
