--- a/html/_/index.html
+++ b/html/_/index.html
@@ -54,7 +54,7 @@ crossorigin=""/>
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
     <a class="dropdown-item btn  save_map_status_on_leaving text-in-color-brown they_support_us__link" role="button" href="../_/support.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving text-in-color-brown the_news__link" role="button" href="../_/nouveaute.html"><span lang="fr">Les nouveautés  </span><span lang="en">News from us  </span><span><i class="fas fa-info-circle notifi2"></i></span></a>
-    <span class="dropdown-item btn sondage"><a class="survey_link  save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">Enquête de satisfaction  </a><a class="survey_link  save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">Satisfaction survey  </a><i class="fas fa-info-circle notifi4"></i></span>
+    <span class="dropdown-item btn sondage"><a class="survey_link  save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">Donnez-nous votre avis ! </a><a class="survey_link  save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">Give us feedback !  </a><i class="fas fa-info-circle notifi4"></i></span>
     <div class="dropdown-divider"></div>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="/newsletter/newsletter/subscribe"><span lang="fr">Newsletter</span><span lang="en">Newsletter</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
@@ -114,11 +114,23 @@ crossorigin=""/>
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 mb-3 text-in-color-brown  save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
+    <a class="btn mt-4 mb-3 text-in-color-brown  save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html">
+      <span lang="fr"><b>Ils nous soutiennent   </b></span>
+      <span lang="en"><b>They support us  </b></span>
+      <span><i class="fas fa-info-circle notifi1"></i></span>
+    </a>
     <br>
-    <a class="btn mt-1 mb-1 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <span class="btn mt-1 mb-1">
+      <a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Donnez-nous votre avis !  </b></a>
+      <a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Give us your feedback </b></a>
+      <i class="fas fa-info-circle notifi4"></i>
+    </span>
     <br>
-    <span class="btn mt-3 mb-1"><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Enquête de satisfaction  </b></a><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Satisfaction survey  </b></a><i class="fas fa-info-circle notifi4"></i></span>
+    <a class="btn mt-3 mb-1 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
+      <span lang="fr"><b>Les nouveautés !   </b></span>
+      <span lang="en"><b>News from ScenTree !  </b></span>
+      <span><i class="fas fa-info-circle notifi2"></i></span>
+    </a>
   </div>    
 </div>
 
